# python-project-template

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: ci.yml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
src/: main.py
tests/: test_main.py
