[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.1.0"
description = "A short description of your project."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "requests>=2.28.0"
]
requires-python = ">=3.10"

[tool.uv]
# `uv` のキャッシュディレクトリを指定
cache-dir = ".uv-cache"

[tool.hatch.metadata]
allow-direct-references = true

 [tool.hatch.build.targets.wheel]
packages = ["src/template"]

[tool.setuptools]
packages = ["src/template"]

[tool.ruff]
exclude = [
  ".venv",
  "tests/*",
]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "W", "F", "B"]
select = ["E", "W", "F", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", ]

[tool.coverage.run]
parallel = true
omit = ["tests/*"]

[tool.coverage.paths]
source = ["src", "*/site-packages/template"]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "nox>=2025.2.9",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.5",
    "sphinx>=8.1.3",
]
